--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="part1">
       <div class="header">
-        <div>
-          <h2>HEADER LOGO</h2>
-        </div>
-        <div>
-          <a href="">header link one</a>
-          <a href="">header link two</a>
-          <a href="">header link three</a>
+        <h2 class="logo">HEADER LOGO</h2>
+        <div class="links">
+          <a class="link" href="">header link one</a>
+          <a class="link" href="">header link two</a>
+          <a class="link" href="">header link three</a>
         </div>
       </div>
-      <div>
-        <h1>This Website is Awesome</h1>
-        <p>
-          This website has some subtext tha goes here under the <br />
-          main title. It's a smaller font and the color is lower <br />
-          contrast
-        </p>
-        <button type="button">Sign up</button>
-      </div>
-      <div><p>this is a placeholder for an image</p></div>
-    </div>
-    <div class="part2">
-      <h2>Some random information</h2>
       <div class="container1">
+        <div>
+          <h1 class="awesome">
+            This Website is <br />
+            Awesome
+          </h1>
+          <p>
+            This website has some subtext tha goes here under the <br />
+            main title. It's a smaller font and the color is lower <br />
+            contrast
+          </p>
+          <button type="button">Sign up</button>
+        </div>
+        <div><p class="image">this is a placeholder for an image</p></div>
+      </div>
+    </div>
+
+    <div class="part2">
+      <h2 class="random">Some random information.</h2>
+      <div class="container2">
         <div class="item">
           <img src="" alt="" />
           <div class="text">
@@ -58,6 +63,22 @@
         </div>
       </div>
     </div>
-    <div class="part3"></div>
+    <div class="part3">
+      <p>
+        This is an inspiring quote, or testimonial from a <br />
+        customer. Maybe it's just filling up space, or maybe <br />
+        people will actually read it. Who knows? All I know <br />
+        is that it looks nice.
+      </p>
+      <p><b>Toufik Bensalem</b></p>
+    </div>
+    <div class="part4">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button type="button">Sign up</button>
+    </div>
+    <div class="footer">
+      <p>Copyright © The odin project 2022</p>
+    </div>
   </body>
 </html>
