--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             main title. It's a smaller font and the color is lower <br />
             contrast
           </p>
-          <button type="button">Sign up</button>
+          <button type="button" class="button1">Sign up</button>
         </div>
         <div><p class="image">this is a placeholder for an image</p></div>
       </div>
@@ -38,25 +38,25 @@
       <h2 class="random">Some random information.</h2>
       <div class="container2">
         <div class="item">
-          <img src="" alt="" />
+          <img src="images/pexels-brett-sayles-992734.jpg" alt="" />
           <div class="text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="item">
-          <img src="" alt="" />
+          <img src="images/pexels-jeff-wang-462402.jpg" alt="" />
           <div class="text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="item">
-          <img src="" alt="" />
+          <img src="images/pexels-kristina-paukshtite-701816.jpg" alt="" />
           <div class="text">
             this is some subtext under an illustration or image
           </div>
         </div>
         <div class="item">
-          <img src="" alt="" />
+          <img src="images/pexels-ylanite-koppens-2343170.jpg" alt="" />
           <div class="text">
             this is some subtext under an illustration or image
           </div>
@@ -64,18 +64,23 @@
       </div>
     </div>
     <div class="part3">
-      <p>
-        This is an inspiring quote, or testimonial from a <br />
-        customer. Maybe it's just filling up space, or maybe <br />
-        people will actually read it. Who knows? All I know <br />
-        is that it looks nice.
+      <p class="quote">
+        This is an inspiring quote, or testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
       </p>
-      <p><b>Toufik Bensalem</b></p>
+      <p class="name"><b>-Toufik Bensalem</b></p>
     </div>
     <div class="part4">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button right over there!</p>
-      <button type="button">Sign up</button>
+      <div class="container3">
+        <div>
+          <h3>Call to action! It's time!</h3>
+          <p class="signup">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button type="button" class="button2">Sign up</button>
+      </div>
     </div>
     <div class="footer">
       <p>Copyright © The odin project 2022</p>
