--- a/index.html
+++ b/index.html
@@ -39,37 +39,36 @@
       <div class="container2">
         <div class="item">
           <img src="images/pexels-brett-sayles-992734.jpg" alt="" />
-          <div class="text">
+          <p class="text">
             this is some subtext under an illustration or image
-          </div>
+          </p>
         </div>
         <div class="item">
           <img src="images/pexels-jeff-wang-462402.jpg" alt="" />
-          <div class="text">
+          <p class="text">
             this is some subtext under an illustration or image
-          </div>
+          </p>
         </div>
         <div class="item">
           <img src="images/pexels-kristina-paukshtite-701816.jpg" alt="" />
-          <div class="text">
+          <p class="text">
             this is some subtext under an illustration or image
-          </div>
+          </p>
         </div>
         <div class="item">
           <img src="images/pexels-ylanite-koppens-2343170.jpg" alt="" />
-          <div class="text">
+          <p class="text">
             this is some subtext under an illustration or image
-          </div>
+          </p>
         </div>
       </div>
     </div>
     <div class="part3">
       <p class="quote">
-        This is an inspiring quote, or testimonial from a customer. Maybe it's
-        just filling up space, or maybe people will actually read it. Who knows?
-        All I know is that it looks nice.
+        Don't compare yourself with other people; compare yourself with who you
+        were yesterday.
       </p>
-      <p class="name"><b>-Toufik Bensalem</b></p>
+      <p class="name"><b>-Jordan Peterson</b></p>
     </div>
     <div class="part4">
       <div class="container3">
